New Level Building assets and basic working hub level built from the design provided

--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
@@ -69,3 +69,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/CGD_TopDownRoguelike")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/CGD_TopDownRoguelike")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
+
