--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=CGD_TopDownRoguelike
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Flinn/Maps/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/L_Hub.L_Hub
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Flinn/BP_RoguelikeGameInstance.BP_RoguelikeGameInstance_C
-GameDefaultMap=/Game/L_Hub.L_Hub
+GameDefaultMap=/Game/L_MainMenu.L_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Flinn/GM_Roguelike.GM_Roguelike_C
 GlobalDefaultServerGameMode=None
