--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultGame.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ ProjectName=Top Down BP Game Template
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="")
+StagingDirectory=(Path="C:/Github/UE4Collab/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Build")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -65,8 +65,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="L_Hub")
-+MapsToCook=(FilePath="L_Shop")
-+MapsToCook=(FilePath="L_Main")
-+MapsToCook=(FilePath="L_Tutorial")
++MapsToCook=(FilePath="/Game/L_Hub")
++MapsToCook=(FilePath="/Game/L_Shop")
++MapsToCook=(FilePath="/Game/Flinn/Maps/L_Main")
++MapsToCook=(FilePath="/Game/L_Tutorial")
 
