--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultGame.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultGame.ini
@@ -65,8 +65,8 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="L_Hub")
-+MapsToCook=(FilePath="L_Shop")
-+MapsToCook=(FilePath="L_Main")
-+MapsToCook=(FilePath="L_Tutorial")
++MapsToCook=(FilePath="/Game/L_Hub")
++MapsToCook=(FilePath="/Game/L_Shop")
++MapsToCook=(FilePath="/Game/Flinn/Maps/L_Main")
++MapsToCook=(FilePath="/Game/L_Tutorial")
 
