--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/CGD_TopDownRoguelike.uproject
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/CGD_TopDownRoguelike.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.26",
+	"EngineAssociation": "{FE0BE32C-461C-5F0B-4041-2683FC8CE0E8}",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
