--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=CGD_TopDownRoguelike
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/L_Hub.L_Hub
+EditorStartupMap=/Game/L_HubRedesign.L_HubRedesign
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
