Fixed items z order bug

--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultEngine.ini
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Flinn/BP_RoguelikeGameInstance.BP_RoguelikeGameInstance_C
-GameDefaultMap=/Game/L_MainMenu.L_MainMenu
+GameDefaultMap=/Game/L_HubRedesign.L_HubRedesign
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Flinn/GM_Roguelike.GM_Roguelike_C
 GlobalDefaultServerGameMode=None
