controls changed, splash screen & icon

--- a/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultGame.ini
+++ b/CGD_TopDownRoguelike/CGD_TopDownRoguelike/Config/DefaultGame.ini
@@ -70,3 +70,8 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Flinn/Maps/L_Main")
 +MapsToCook=(FilePath="/Game/L_Tutorial")
 
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=True
+bMoviesAreSkippable=False
++StartupMovies=StaffsIdent_Audio
+
